# fsr_backpack

./: git_clear.sh  start.sh
build-fsr_backpack_arm_node-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  fsr_backpack_arm_node.cbp
build-fsr_backpack_arm_node-Desktop-Default/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build-fsr_backpack_arm_node-Desktop-Default/catkin_generated/installspace/: fsr_backpack_arm_node.pc  fsr_backpack_arm_nodeConfig.cmake
build-fsr_backpack_arm_node-Desktop-Default/devel/: .catkin  .rosinstall  setup.sh
build-fsr_backpack_arm_node-Desktop-Default/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
build-fsr_backpack_arm_node-Desktop-Default/devel/lib/fsr_backpack_arm_node/: fsr_backpack_arm_node
build-fsr_backpack_arm_node-Desktop-Default/devel/lib/pkgconfig/: fsr_backpack_arm_node.pc
build-fsr_backpack_arm_node-Desktop-Default/devel/share/fsr_backpack_arm_node/cmake/: fsr_backpack_arm_nodeConfig.cmake
build-fsr_backpack_arm_node-Desktop-Default/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
build-fsr_backpack_im2gs-Desktop-Default/: CMakeCache.txt
build-fsr_backpack_im2gs-Desktop-Default/catkin_generated/: generate_cached_setup.py  setup_cached.sh
build-fsr_backpack_im2gs-Desktop-Default/catkin_generated/installspace/: _setup_util.py
build-fsr_backpack_im2gs-Desktop-Default/devel/: .catkin  .rosinstall  setup.sh
build-fsr_backpack_im2gs-Desktop-Default/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
fsr_backpack_arm_node/: CMakeLists.txt  package.xml
fsr_backpack_arm_node/launch/: fsr_backpack_arm_node_image.launch  fsr_backpack_arm_node_imu.launch  localization_bp.launch  localization_without_EKF.launch  rtkrcv_robot.launch
fsr_backpack_arm_node/src/: fsr_backpack_arm_node.cc  fsr_backpack_arm_node_v0.1.cc  fsr_backpack_arm_node_v0.2.cc
fsr_backpack_data_viewer/: CMakeLists.txt  package.xml
fsr_backpack_data_viewer/launch/: fsr_backpack_simple_data_viewer.launch  fsr_husky_mines_detection_test.launch
fsr_backpack_data_viewer/src/: metal_detector_viewer_node.cpp
fsr_backpack_description/: CMakeLists.txt  description.rviz  package.xml
fsr_backpack_description/launch/: description_backpack.launch  description_backpack_test.launch
fsr_backpack_description/models/: Schiebel.STL  mochila.STL
fsr_backpack_description/urdf/: fsr_backpack.urdf.xacro  fsr_backpack_v0_1.urdf.xacro  fsr_backpack_v0_2.urdf.xacro  fsr_backpack_v0_3.urdf.xacro  fsr_backpack_v0_4.urdf.xacro  fsr_backpack_v0_5.urdf.xacro
fsr_backpack_description/urdf/fsr_backpack_parts/: gps_antenna.urdf.xacro  mti.urdf.xacro
fsr_backpack_im2gs/: CMakeLists.txt  package.xml
fsr_backpack_im2gs/src/: fsr_backpack_im2gs.cpp  visual_odometry.cpp
fsr_backpack_odometry/: CMakeLists.txt  mainpage.dox  package.xml
fsr_backpack_odometry/launch/: fsr_backpack_odometry.launch
fsr_backpack_odometry/src/: fsr_backpack_odometry.cpp
gy80_md_driver/: CMakeLists.txt  mainpage.dox  package.xml
gy80_md_driver/launch/: fsr_backpack_gy80_Schiebel.launch
gy80_md_driver/src/: gy80_md_driver.cpp
