<?xml version="1.0"?>
<package>
  <name>fsr_backpack_im2gs</name>
  <version>0.0.0</version>
  <description>Convert image to gray scale package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="xpecttrum@gmail.com">Jose Prado</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://ros.org/wiki/todo</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="xpecttrum@gmail.com">Jose Prado</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
 <build_depend>OpenCV</build_depend>
 <build_depend>image_transport</build_depend>
 <build_depend>cv_bridge</build_depend>
 

  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
