<?xml version="1.0"?>
<package>
  <name>fsr_backpack_odometry</name>
  <version>0.0.0</version>
  <description>The fsr_backpack_odometry package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="xpecttrum@gmail.com">Jose Prado</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://ros.org/wiki/todo</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="xpecttrum@gmail.com">Jose Prado</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  
 
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
